# taikoscope

./: .dockerignore  .gitignore  .vercelignore  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.ingestor  Dockerfile.processor  Dockerfile.taikoscope  LICENSE  README.md  SSE_FIX_SUMMARY.md  dev.env  docker-compose.yml  justfile  rust-toolchain.toml  start.sh  tasks.md
.github/: .dependabot.yml
.github/workflows/: dashboard.yml  lint.yml  openapi.yml  unit.yml
crates/api/: Cargo.toml
crates/api-types/: Cargo.toml
crates/api-types/src/: lib.rs
crates/api/src/: lib.rs  state.rs  validation.rs
crates/api/src/helpers/: aggregation.rs  common.rs  conversion.rs  mod.rs  pagination.rs
crates/api/src/routes/: aggregated.rs  batch.rs  core.rs  mod.rs  sse.rs  table.rs
crates/chainio/: Cargo.toml
crates/chainio/src/: lib.rs
crates/chainio/src/taiko/: mod.rs  preconf_whitelist.rs  wrapper.rs
crates/clickhouse/: Cargo.toml  build.rs
crates/clickhouse/migrations/: 001_create_tables.sql  002_create_materialized_views.sql  003_add_sum_base_fee_column.sql  004_add_l2_block_number_to_l1_data_costs.sql  005_create_metrics_views.sql  006_add_last_l2_block_to_batches.sql  007_add_batch_blocks_table.sql  008_add_prove_verify_costs.sql  009_change_l1_data_costs_to_batch.sql  010_add_reorg_sequencers.sql  011_add_tx_hash_to_batches.sql  012_create_partitioned_head_events.sql  013_create_partitioned_batches.sql  014_cleanup_partitioned_head_events.sql  015_create_orphaned_l2_hashes.sql  016_add_data_skipping_indices.sql  017_add_batch_blocks_projection.sql  018_optimize_order_by.sql  019_add_schema_migrations_tracking.sql  019_create_migrations_table.sql  019_create_orphaned_l1_hashes.sql  020_create_replacing_merge_tree_tables.sql  021_migrate_to_replacing_merge_tree_MANUAL.sql  022_atomic_table_swap_MANUAL.sql  023_cleanup_old_tables.sql  024_old_batches_batch_blocks_replacing_merge_tree_MANUAL.sql  README_ReplacingMergeTree_Migration.md
crates/clickhouse/src/: client.rs  conversions.rs  lib.rs  mapping.rs  models.rs  reader.rs  schema.rs  types.rs  writer.rs
crates/clickhouse/src/reader/: client.rs  mod.rs  tests.rs  time_range.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/driver/: Cargo.toml
crates/driver/src/: driver.rs  event.rs  event_handler.rs  event_processing.rs  gap_detection.rs  ingestor.rs  lib.rs  monitoring.rs  preconf.rs  processor.rs  reorg_detection.rs  subscription.rs  unified.rs
crates/extractor/: Cargo.toml
crates/extractor/src/: lib.rs
crates/extractor/tests/: integration.rs
crates/incident/: Cargo.toml
crates/incident/src/: base_monitor.rs  batch_proof_monitor.rs  client.rs  helpers.rs  lib.rs  monitor.rs  retry.rs
crates/incident/src/monitor/: batch_proof_timeout.rs  batch_verify_timeout.rs  instatus.rs  instatus_l1.rs  mod.rs  public_rpc.rs  tests.rs
crates/inserter/: Cargo.toml
crates/inserter/src/: lib.rs
crates/messages/: Cargo.toml
crates/messages/src/: event_types.rs  lib.rs  models.rs  types.rs
crates/nats-utils/: Cargo.toml
crates/nats-utils/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs  public_rpc_monitor.rs  retries.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: blob_fee.rs  block_stats.rs  hardware.rs  headers.rs  http_retry.rs  l1_data_cost.rs  lib.rs  rate_limiter.rs  retries.rs  shutdown.rs  shutdown_test.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: health.rs  lib.rs  rate_limiter.rs  shutdown.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  rate_limit.rs
dashboard/: .eslintrc.cjs  .eslintrc.json  AGENTS.md  App.tsx  README.md  constants.ts  custom.d.ts  eslint.config.js  groupMetrics.ts  headUpdates.ts  helpers.ts  helpers.tsx  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  sequencerConfig.ts  tailwind.config.js  theme.ts  tsconfig.json  tsconfig.tests.json  types.ts  utils.ts  vite.config.ts
dashboard/components/: AdvancedDataTable.tsx  BatchProcessChart.tsx  BlobsPerBatchChart.tsx  BlockProfitTables.tsx  BlockTimeChart.tsx  BlockTimeDistributionChart.tsx  BlockTimeHistogram.tsx  BlockTxChart.tsx  ChartCard.tsx  CostChart.tsx  DashboardFooter.tsx  DashboardHeader.tsx  DataQualityIndicator.tsx  DataTable.tsx  EconomicsChart.tsx  ErrorBoundary.tsx  FeeFlowChart.tsx  GasUsedChart.tsx  IncomeChart.tsx  LazyMount.tsx  MetricCard.tsx  MetricCardSkeleton.tsx  MetricGroup.tsx  MetricSection.tsx  MissedBlockChart.tsx  ProfitCalculator.tsx  ProfitRankingTable.tsx  ProfitabilityChart.tsx  RefreshCountdown.tsx  ReorgDepthChart.tsx  RevenueChart.tsx  SequencerBarChart.tsx  SequencerBlockTable.tsx  SequencerPieChart.tsx  SummaryBar.tsx  ThemeToggle.tsx  ToastProvider.tsx  TpsChart.tsx  ViewTabs.tsx  VirtualizedTable.tsx
dashboard/config/: tableConfig.ts
dashboard/contexts/: ThemeContext.tsx
dashboard/hooks/: useApiQuery.ts  useBlockData.ts  useChartsData.ts  useDashboardController.ts  useDataFetcher.ts  useDataValidation.ts  useErrorHandler.tsx  useIsMobile.ts  useMetricsData.ts  useNavigationHandler.ts  useRefreshTimer.ts  useRouterNavigation.ts  useSearchParams.ts  useSequencerHandler.ts  useTableActions.ts  useTableRouter.ts  useTimeRangeSync.ts
dashboard/public/: .htaccess  _headers  web.config
dashboard/scripts/: check-trailing-whitespace.cjs
dashboard/services/: apiService.ts  mockData.ts  mockDataService.ts  priceService.ts
dashboard/styles/: recharts.css
dashboard/tests/: apiService.test.ts  app.integration.test.ts  batchProcessChart.test.ts  blockProfitTables.test.ts  blockTimeChart.test.ts  blockTimeDistributionChart.test.ts  chartCard.test.ts  costChart.test.ts  dashboardFooter.test.ts  dashboardHeader.test.ts  dataFetcher.test.ts  dataTable.test.ts  economicsChart.test.ts  errorBoundary.test.ts  errorHandler.test.ts  feeFlowCalculations.test.ts  groupMetrics.test.ts  headUpdates.test.ts  helpers.test.ts  incomeChart.test.ts  metricCard.test.ts  (+26 more)
docs/: API.md  DEPLOYMENT.md  api.md
src/: main.rs
tests/: api_integration.rs  pagination.rs
(+29 files in other folders)
