[workspace]
members = ["bin/*", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
exclude = [".github/"]
repository = "https://github.com/chainbound/taikoscope"

[workspace.dependencies]
alloy = { version = "1.0.3", features = ["provider-ws"] }
alloy-contract = { version = "1.0.3" }
alloy-json-rpc = { version = "1.0.3" }
alloy-rpc-client = "1.0.3"
alloy-rpc-types-eth = "1.0.1"
alloy-primitives = "1.1.0"
alloy-consensus = "1.0.1"
alloy-network-primitives = "1.0.1"
alloy-sol-types = "1.1.0"
alloy-sol-macro = "1.1.0"
async-trait = "0.1"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive", "env"] }
clickhouse = { version = "0.13.2", features = ["native-tls", "test-util"] }
derive_more = { version = "1.0.0", features = ["debug", "deref"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
futures = "0.3"
mockito = "1.7.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-retry = "0.3.0"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = { version = "2.5.4", features = ["serde"] }
axum = { version = "0.7.5", features = ["json"] }
tower-http = { version = "0.5.2", features = ["cors"] }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
as_ptr_cast_mut = "warn"
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
checked_conversions = "warn"
clear_with_drain = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
cognitive_complexity = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
fallible_impl_from = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
large_types_passed_by_value = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
map_with_unused_argument_over_ranges = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
non_std_lazy_statics = "warn"
non_send_fields_in_send_ty = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
redundant_pub_crate = "warn"
return_and_then = "warn"
significant_drop_in_scrutinee = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
str_to_string = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
trivially_copy_pass_by_ref = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
unnecessary_literal_bound = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_semicolon = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
future_not_send = "allow"
significant_drop_tightening = "allow"
