[package]
name = "api-types"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
clickhouse_lib = { path = "../clickhouse", package = "clickhouse" }

serde.workspace = true
utoipa.workspace = true

[lints]
workspace = true
