[package]
name = "api-types"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
clickhouse_lib = { path = "../clickhouse", package = "clickhouse" }
axum.workspace = true
chrono.workspace = true

serde.workspace = true
utoipa.workspace = true
serde_with.workspace = true

[lints]
workspace = true
