[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clickhouse_lib = { path = "../clickhouse", package = "clickhouse" }
primitives = { path = "../primitives" }

axum.workspace = true
chrono.workspace = true
eyre.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true

[dev-dependencies]
tower = "0.5"
url.workspace = true
clickhouse = { package = "clickhouse", version = "0.13.2", features = ["native-tls", "test-util"] }

[lints]
workspace = true
