[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clickhouse_lib = { path = "../clickhouse", package = "clickhouse" }
runtime = { path = "../runtime" }
api-types = { path = "../api-types" }

axum.workspace = true
chrono = { workspace = true, features = ["serde"] }
eyre.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
async-stream = "0.3"
futures.workspace = true
utoipa = { version = "5.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum"] }

[dev-dependencies]
tower = "0.5"
url.workspace = true
clickhouse = { package = "clickhouse", version = "0.13.2", features = ["native-tls", "test-util"] }

[lints]
workspace = true
