[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clickhouse_lib = { path = "../clickhouse", package = "clickhouse" }
runtime = { path = "../runtime" }
api-types = { path = "../api-types" }
primitives = { path = "../primitives" }

alloy-primitives.workspace = true
async-stream.workspace = true
axum.workspace = true
chrono = { workspace = true, features = ["serde"] }
eyre.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
futures.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
network = { path = "../network" }
reqwest.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tower = "0.5"
url.workspace = true
clickhouse = { package = "clickhouse", version = "0.13.3", features = ["native-tls", "test-util"] }
serde_urlencoded = "0.7"

[lints]
workspace = true
