[package]
name = "chainio"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
primitives = { path = "../primitives" }

alloy.workspace = true
alloy-contract.workspace = true
alloy-primitives.workspace = true
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
derive_more.workspace = true
url.workspace = true

[lints]
workspace = true
