[package]
name = "clickhouse"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
chainio = { path = "../chainio" }
primitives = { path = "../primitives" }

alloy.workspace = true
chrono = { workspace = true, features = ["serde"] }
clickhouse.workspace = true
derive_more.workspace = true
eyre.workspace = true
serde.workspace = true
sqlparser = "0.48"
tracing.workspace = true
url.workspace = true
hex.workspace = true
include_dir = "0.7"
regex = "1"
utoipa = { version = "5.3", features = ["chrono"] }

[dev-dependencies]
clickhouse.workspace = true
tokio.workspace = true

[features]
test-util = ["clickhouse/test-util"]

[lints]
workspace = true
