[package]
name = "config"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
async-nats.workspace = true
clap.workspace = true
url.workspace = true

[lints]
workspace = true
