[package]
name = "driver"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
config = { path = "../config" }
chainio = { path = "../chainio" }
clickhouse = { path = "../clickhouse" }
extractor = { path = "../extractor" }
incident = { path = "../incident" }
primitives = { path = "../primitives" }

chrono.workspace = true
alloy-primitives.workspace = true
clap.workspace = true
dotenvy.workspace = true
eyre.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[lints]
workspace = true
