[package]
name = "driver"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
config = { path = "../config" }
chainio = { path = "../chainio" }
clickhouse = { path = "../clickhouse" }
extractor = { path = "../extractor" }
primitives = { path = "../primitives" }
incident = { path = "../incident" }

chrono = { workspace = true, features = ["serde"] }
alloy-primitives.workspace = true
clap.workspace = true
dotenvy.workspace = true
eyre.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
url.workspace = true
clickhouse_rs = { package = "clickhouse", version = "0.13.3", features = ["native-tls", "test-util"] }
http = "1"
tokio-tungstenite = "0.26"
futures.workspace = true

[lints]
workspace = true
