[package]
name = "extractor"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
alloy.workspace = true
derive_more.workspace = true
eyre.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
