[package]
name = "extractor"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
chainio = { path = "../chainio" }
network = { path = "../network" }
primitives = { path = "../primitives" }

alloy.workspace = true
alloy-json-rpc.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-consensus.workspace = true
alloy-network-primitives.workspace = true
derive_more.workspace = true
eyre.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
