[package]
name = "incident"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
chrono.workspace = true
clickhouse = { path = "../clickhouse" }
eyre.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
mockito.workspace = true

[lints]
workspace = true
