[package]
name = "incident"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
clickhouse = { path = "../clickhouse" }

async-trait.workspace = true
chrono.workspace = true
eyre.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
primitives = { path = "../primitives" }

[dev-dependencies]
mockito.workspace = true
url.workspace = true

[lints]
workspace = true
