[package]
name = "incident"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
clickhouse = { path = "../clickhouse" }

async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
eyre.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
network = { path = "../network" }
url.workspace = true

[dev-dependencies]
mockito.workspace = true

[lints]
workspace = true
