[package]
name = "inserter"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
clickhouse.workspace = true
derive_more.workspace = true
extractor = { version = "0.1.0", path = "../extractor" }
eyre.workspace = true

[lints]
workspace = true
