[package]
name = "inserter"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
chainio = { path = "../chainio" }

alloy.workspace = true
clickhouse.workspace = true
derive_more.workspace = true
extractor = { version = "0.1.0", path = "../extractor" }
eyre.workspace = true
serde.workspace = true

[dev-dependencies]
clickhouse = { workspace = true, features = ["test-util"] }
tokio      = { version = "1.44.1",   features = ["macros"] }

[lints]
workspace = true
