[package]
name = "messages"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
chainio = { path = "../chainio" }
primitives = { path = "../primitives" }

alloy-primitives.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde.workspace = true

[lints]
workspace = true
