[package]
name = "network"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
alloy.workspace = true
alloy-json-rpc.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
eyre.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-retry.workspace = true
futures.workspace = true

[dev-dependencies]
mockito.workspace = true

[lints]
workspace = true
