[package]
name = "primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
alloy.workspace = true
alloy-json-rpc.workspace = true
alloy-primitives.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
alloy-network-primitives.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "signal",
] }
tokio-retry.workspace = true
tracing.workspace = true
eyre.workspace = true
reqwest.workspace = true

[dev-dependencies]
mockito.workspace = true

[lints]
workspace = true
