[package]
name = "primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
alloy-network-primitives.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
futures.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true

[lints]
workspace = true
