[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "signal"] }
tracing.workspace = true
futures.workspace = true
axum.workspace = true
api-types = { path = "../api-types" }
eyre.workspace = true

[dev-dependencies]
eyre.workspace = true

[lints]
workspace = true
