[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
api = { path = "../api" }
api-types = { path = "../api-types" }
clickhouse_lib = { path = "../clickhouse", package = "clickhouse" }
runtime = { path = "../runtime" }
axum.workspace = true
tower-http.workspace = true
tower.workspace = true
tokio.workspace = true
tracing.workspace = true
eyre.workspace = true

[lints]
workspace = true

[dev-dependencies]
chrono.workspace = true
clickhouse.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
url.workspace = true
config = { path = "../config" }
